--- a/public/styles.css
+++ b/public/styles.css
@@ -9,18 +9,22 @@ body {
     justify-content: center;
     align-items: center;
 }
+.content {
+    margin-bottom: 3rem;
+}
 .header{
     display: flex;
     margin-top: 3rem;
     flex-direction: row;
     column-gap: 1em;
     align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 .header-title {
     font-size: 2em;
 }
 .header-links  {
-    padding: 2em;
     display: flex;
     flex-wrap: nowrap;
 }
@@ -40,20 +44,28 @@ body {
     transition: all .3s;
 }
 .calendar {
-    border-style: solid;
-    border-width: 0.05em;
-    border-color: #ababab;
-    border-radius: 0.5em;
     margin-top: 1em;
-    padding: 0.5em;
 }
-td {
+table {
+    border-collapse: collapse;
+}
+.day-description {
     height: 3em;
     width: 10em;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 1em;
+    color: #484848;
+    background-color: #d1d0d0;
+}
+.month-description {
+    height: 3em;
+    width: 10em;
+    text-align: center;
+    font-size: 1em;
     font-weight: bold;
-    color: #747474;
+    background-color: #959af4;
+    text-transform: uppercase;
+    border-radius: 0.5em 0.5em 0 0;
 }
 th {
     height: 10em;
@@ -61,15 +73,22 @@ th {
     border-style: solid;
     border-width: 0.05em;
     border-color: #ababab;
-    cursor: pointer;
 }
-th:hover {
-    background-color: #ababab;
-    text-decoration: none;
-    color: #fff;
-    transition: all .3s;
+.days, .next-days{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
+    row-gap: 0.5em;
+    background-color: #ebebeb;
+    color: #a9a9a9;
 }
-.days {
+.today {
+    background-color: #edeefa;
+}
+.days, .next-days, .actual-days, .today{
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -78,11 +97,11 @@ th:hover {
     justify-content: flex-start;
     row-gap: 0.5em;
 }
+
 .date{
-    font-size: 0.5em;
     font-size: 0.8em;
     font-weight: lighter;
-    color: #ababab;
+    padding: 1em;
 }
 .note{
     font-size: 0.8em;
@@ -92,6 +111,7 @@ th:hover {
     border-width: 0.05em;
     background: #c7c7ef;
     padding: 0.5em;
+    cursor: pointer;
 }
 .modal-fade {
     background-color: #333333;
@@ -147,4 +167,37 @@ th:hover {
     border-style: solid;
     border-color: #b7b7b7;
     border-width: 1px;
+}
+.form-content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5em;
+}
+.form-input {
+    display: flex;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    row-gap: 0.2em;
+}
+.form-label {
+    font-size: 0.9em;
+}
+input {
+    height: 1.5em;
+    border-radius: 0.3em;
+    border-width: 0.01em;
+}
+.form-submit {
+    height: 2em;
+    margin: 1em 0 1em 0;
+    border-radius: 0.3em;
+    border-width: 0.01em;
+    background-color: #cee1f7;
+}
+.close {
+    border-radius: 0.5em;
+    background-color: #fff;
+    padding: 0.1em;
+    margin: 0.5em;
 }
